Quick links updated

--- a/team1.html
+++ b/team1.html
@@ -82,6 +82,7 @@ Karun Mehra<img src="images/svg/back2.png" style=" height: 30px;"></a>
                                 <a href="index.html">How</a>
                                 <a href="index.html">Who</a>
                                 <a href="index.html">Connect</a>
+                                <a href="http://findyourcandidate.net/">Contingent Hiring</a>
                             </p>
                              <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
                                         
