--- a/board.html
+++ b/board.html
@@ -72,6 +72,7 @@
                                 <a href="index.html">How</a>
                                 <a href="index.html">Who</a>
                                 <a href="index.html">Connect</a>
+                                <a href="http://findyourcandidate.net/">Contingent Hiring</a>
                             </p>
                              <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
                                         
@@ -85,7 +86,7 @@
                             <p class="contact-email">
                                 <a href="executive.html" title="Executive Search">Executive Search</a>
                                 <a href="board.html" title="Board Consulting">Board Consulting</a>
-                                <a href="single.html" title="Contingent Search">Contingent Search</a>
+                                <a href="single.html" title="Contingent Search">u</a>
                                 <a href="training.html" title="Learning & Development">Learning & Development</a>
                                 <a href="research.html" title="Peergrowth Research Chronicle">Peergrowth Research Chronicle</a>
                             </p>
