--- a/team4.html
+++ b/team4.html
@@ -80,6 +80,7 @@ Next Member<img src="images/svg/back2.png" style=" height: 30px;"></a>
                                 <a href="index.html">How</a>
                                 <a href="index.html">Who</a>
                                 <a href="index.html">Connect</a>
+                                <a href="http://findyourcandidate.net/">Contingent Hiring</a>
                             </p>
                              <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
                                         
