adding link in the contigent page

--- a/single.html
+++ b/single.html
@@ -54,6 +54,12 @@
      
                 As a team, we firmly believe that “Quality is never an accident. It is always the result of intelligent effort.”
                 </p>
+
+                <div class="contigent_link" >
+                    <img src="images/pg_logo.png" style="width:200px;"><br>
+                    <a href="http://www.findyourcandidate.net/" style="margin-bottom: 100px !important;" target="_blank">Find Your Candidate (The Contingent Search Recruitment Division).</a>                    
+                </div>
+                 
              <p class="action-hint">
                         <a class="scroll-down" href="board.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
