--- a/board.html
+++ b/board.html
@@ -51,7 +51,7 @@
                     </p>
                     <p class="action-hint1">
                         <a class="scroll-down" href="single.html"> 
-                        Contingent Search<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+                        FindyourCandidate<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
                     </p> 
           </div>
       </div>
@@ -72,7 +72,7 @@
                                 <a href="index.html">How</a>
                                 <a href="index.html">Who</a>
                                 <a href="index.html">Connect</a>
-                                <a href="http://findyourcandidate.net/">Contingent Hiring</a>
+                                <a target="_blank" href="http://findyourcandidate.net/">FindyourCandidate</a>
                             </p>
                              <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
                                         
