--- a/research.html
+++ b/research.html
@@ -70,7 +70,7 @@
                                 <a href="index.html">How</a>
                                 <a href="index.html">Who</a>
                                 <a href="index.html">Connect</a>
-                                <a href="http://findyourcandidate.net/">Contingent Hiring</a>
+                                <a target="_blank" href="http://findyourcandidate.net/">FindyourCandidate</a>
                             </p>
                              <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
                                         
