--- a/team2.html
+++ b/team2.html
@@ -74,7 +74,7 @@ Bhavna Kapoor<img src="images/svg/back2.png" style=" height: 30px;"></a>
                                 <a href="index.html">How</a>
                                 <a href="index.html">Who</a>
                                 <a href="index.html">Connect</a>
-                                <a href="http://findyourcandidate.net/">Contingent Hiring</a>
+                                <a target="_blank" href="http://findyourcandidate.net/">FindyourCandidate</a>
                             </p>
                              <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
                                         
