--- a/training.html
+++ b/training.html
@@ -45,7 +45,7 @@
              <p class="action-hint">
                         <a class="scroll-down" href="single.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                           Contingent Search
+                           FindyourCandidate
                         </a>                     
                     </p>
                     <p class="action-hint1">
@@ -70,7 +70,7 @@
                                 <a href="index.html">How</a>
                                 <a href="index.html">Who</a>
                                 <a href="index.html">Connect</a>
-                                <a href="http://findyourcandidate.net/">Contingent Hiring</a>
+                                <a target="_blank" href="http://findyourcandidate.net/">FindyourCandidate</a>
                             </p>
                              <a class="footer-button1 joinus-button" href="joinus.html">Join Us</a>              
                                         
