--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                 <div class="icon-test large-2 medium-4 columns">
                     <div class="icon-text">
                         <div class="icon-3"></div>
-                        <h3>Contingent Hiring</h3>
-                        <p style=" font-size: 10px; font-weight: bold; font-family: montserrat; margin-top: 8px;">FindYourCandidate</p>
+                        <h3  style=" font-size: 12px !important; font-weight: bold; font-family: montserrat; margin-top: 8px; text-transform: none;">FindYourCandidate</h3>
+                     
                     </div>
                 </div>
                 <div class="icon-test large-2 medium-4 columns">
