--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
                             <p class="contact-email">
                                 <a href="executive.html" title="Executive Search">Executive Search</a>
                                 <a href="board.html" title="Board Consulting">Board Consulting</a>
-                                <a href="single.html" title="Contingent Search">Contingent Search</a>
+                                <a href="single.html" title="FindYourCandidate">FindYourCandidate</a>
                                 <a href="training.html" title="Learning & Development">Learning & Development</a>
                                 <a href="research.html" title="Peergrowth Research Chronicle">Peergrowth Research Chronicle</a>
                             </p>
