--- a/team2.html
+++ b/team2.html
@@ -88,7 +88,7 @@ Bhavna Kapoor<img src="images/svg/back2.png" style=" height: 30px;"></a>
                             <p class="contact-email">
                                 <a href="executive.html" title="Executive Search">Executive Search</a>
                                 <a href="board.html" title="Board Consulting">Board Consulting</a>
-                                <a href="single.html" title="Contingent Search">Contingent Search</a>
+                                <a href="single.html" title="FindYourCandidate">FindYourCandidate</a>
                                 <a href="training.html" title="Learning & Development">Learning & Development</a>
                                 <a href="research.html" title="Peergrowth Research Chronicle">Peergrowth Research Chronicle</a>
                             </p>
