--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="icon-test large-2 medium-4 columns">
                     <div class="icon-text">
                         <div class="icon-3"></div>
-                        <h3  style=" font-size: 12px !important; font-weight: bold; font-family: montserrat; margin-top: 8px; text-transform: none;">FindYourCandidate</h3>
+                        <h3>FindYour<br>Candidate</h3>
                      
                     </div>
                 </div>
@@ -533,7 +533,7 @@
                             <p class="contact-email">
                                 <a href="executive.html" title="Executive Search">Executive Search</a>
                                 <a href="board.html" title="Board Consulting">Board Consulting</a>
-                                <a href="single.html" title="Contingent Hiring">Contingent Hiring</a>
+                                <a href="single.html" title="FindYourCandidate">FindYourCandidate</a>
                                 <a href="training.html" title="Learning & Development">Learning & Development</a>
                                 <a href="research.html" title="Peergrowth Research Chronicle">Peergrowth Research Chronicle</a>
                             </p>
@@ -702,7 +702,7 @@
                             <p class="contact-email">
                                 <a href="executive.html" title="Executive Search">Executive Search</a>
                                 <a href="board.html" title="Board Consulting">Board Consulting</a>
-                                <a href="single.html" title="Contingent Hiring">Contingent Hiring</a>
+                                <a href="single.html" title="FindYourCandidate">FindYourCandidate</a>
                                 <a href="training.html" title="Learning & Development">Learning & Development</a>
                                 <a href="research.html" title="Peergrowth Research Chronicle">Peergrowth Research Chronicle</a>
                             </p>
@@ -910,7 +910,7 @@
                             <p class="contact-email">
                                 <a href="executive.html" title="Executive Search">Executive Search</a>
                                 <a href="board.html" title="Board Consulting">Board Consulting</a>
-                                <a href="single.html" title="Contingent Hiring">Contingent Hiring</a>
+                                <a href="single.html" title="FindYourCandidate">FindYourCandidate</a>
                                 <a href="training.html" title="Learning & Development">Learning & Development</a>
                                 <a href="research.html" title="Peergrowth Research Chronicle">Peergrowth Research Chronicle</a>
                             </p>
@@ -1078,7 +1078,7 @@
                             <div  style="margin-bottom:10px;"class="large-12 columns">
                                 <p style="color:#0277b8;">We are interested in:</p>
                                  <input  type="radio" name="test"><span style="color:#0277b8;">Executive Search</span>
-                                 <input type="radio" name="test"><span style="color:#0277b8;">Contingent Hiring</span>
+                                 <input type="radio" name="test"><span style="color:#0277b8;">FindYourCandidate</span>
                                  <input type="radio" name="test"><span style="color:#0277b8;">L&D</span>
                                  <input type="radio" name="test"><span style="color:#0277b8;">Board Consulting</span>
                             </div>
@@ -1119,7 +1119,7 @@
                             <p class="contact-email">
                                 <a href="executive.html" title="Executive Search">Executive Search</a>
                                 <a href="board.html" title="Board Consulting">Board Consulting</a>
-                                <a href="single.html" title="Contingent Hiring">Contingent Hiring</a>
+                                <a href="single.html" title="FindYourCandidate">FindYourCandidate</a>
                                 <a href="training.html" title="Learning & Development">Learning & Development</a>
                                 <a href="research.html" title="Peergrowth Research Chronicle">Peergrowth Research Chronicle</a>
                             </p>
