Find Your Candidate change

--- a/training.html
+++ b/training.html
@@ -45,7 +45,7 @@
              <p class="action-hint">
                         <a class="scroll-down" href="single.html"> 
                         <img src="images/svg/back123.png" style=" height: 30px;">
-                           FindyourCandidate
+                           FindYourCandidate
                         </a>                     
                     </p>
                     <p class="action-hint1">
