--- a/board.html
+++ b/board.html
@@ -51,7 +51,7 @@
                     </p>
                     <p class="action-hint1">
                         <a class="scroll-down" href="single.html"> 
-                        FindyourCandidate<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+                        FindYourCandidate<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
                     </p> 
           </div>
       </div>
