--- a/single.html
+++ b/single.html
@@ -49,7 +49,7 @@
       <div class="two spacing"></div>
       <div class="row">
           <div class="large-8 large-centered columns">
-                <p>We understand the urgency & strict turnaround timelines when it comes to recruiting candidates at Middle to Junior level management. Our team thrives on our agile approach, targeted search and a razor-sharp focus on identifying the most suitable talent for our clients.</p> 
+                <p>We understand the urgency & strict turnaround timelines when it comes to recruiting candidates at Middle and Junior level management. Our team thrives on our agile approach, targeted search and a razor-sharp focus on identifying the most suitable talent for our clients.</p> 
 
 
                 <p>We focus on understanding the business needs of our clients, evaluating the available talent pool within the same or allied industries and presenting the most suitable candidates who are busy being good at what they do.
