--- a/team1.html
+++ b/team1.html
@@ -61,8 +61,8 @@
 <img src="images/svg/back123.png" style=" height: 30px;">Home</a>                       
 </p>
 <p class="action-hint-team-next">
-<a class="scroll-down" href="team2.html"> 
-Karun Mehra<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+<a class="scroll-down" href="team3.html"> 
+Bhavna Kapoor<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
