--- a/team2.html
+++ b/team2.html
@@ -49,12 +49,12 @@ During weekends, Karun is busy making music and playing sports.</p>
 
 </div>
 <p class="action-hint-team">
-<a class="scroll-down" href="team1.html"> 
-<img src="images/svg/back123.png" style=" height: 30px;">Abhishek Singh</a>                       
+<a class="scroll-down" href="team3.html"> 
+<img src="images/svg/back123.png" style=" height: 30px;">Bhavna Kapoor</a>                       
 </p>
 <p class="action-hint-team-next">
-<a class="scroll-down" href="team3.html"> 
-Bhavna Kapoor<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+<a class="scroll-down" href="team4s.html"> 
+Elizabeth James <img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
