--- a/team3.html
+++ b/team3.html
@@ -51,12 +51,12 @@ When not recruiting she is probably building jigsaws, honing her culinary skills
 
 </div>
 <p class="action-hint-team">
-<a class="scroll-down" href="team2.html"> 
-<img src="images/svg/back123.png" style=" height: 30px;">Karun Mehra</a>                       
+<a class="scroll-down" href="team1.html"> 
+ <img src="images/svg/back123.png" style=" height: 30px;">Abhishek Singh</a>                       
 </p>
 <p class="action-hint-team-next">
-<a class="scroll-down" href="team4.html"> 
-Elizabeth James<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
+<a class="scroll-down" href="team2.html"> 
+Karun Mehra<img src="images/svg/back2.png" style=" height: 30px;"></a>                       
 </p>
 </div>
 
