logo changed on the homepage

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 <body>
     <div class="logo">
-        <a href="index.html">PEERGROWTH</a>
+        <!--<a href="index.html">PEERGROWTH</a>-->
+        <a href="index.html"><img src="images/pglogo.png" style="width: 80px; "></a>       
     </div>
     <div id="about" class="box">
 
