upload spelling in join us page

--- a/joinus.html
+++ b/joinus.html
@@ -59,7 +59,7 @@
                             </div>
                             <div class="large-12 columns">
                                 <textarea class='required' name='message' placeholder='MESSAGE' style="border:1px solid #fff;"></textarea>
-                                <h5 class="white" style="color: white;">uplaod your resume</h5>
+                                <h5 class="white" style="color: white;">upload your resume</h5>
                                 <input style="color:#fff;" type="file">
                                 <input class='button white boxed contact-button' type='submit' value="Send it" style="border:1px solid #000; background:#fff; color: black !important; ">
                             </div>
