--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <div class="logo">
         <!--<a href="index.html">PEERGROWTH</a>-->
-        <a href="index.html"><img src="images/pglogo.png" style="width: 80px; "></a>       
+        <a href="index.html"><img src="images/pglogo.png" style="width: 80px;     margin-top: -16px;"></a>       
     </div>
     <div id="about" class="box">
 
