--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/flickity-fade@1/flickity-fade.css">
     <script src="https://unpkg.com/flickity-fade@1/flickity-fade.js"></script>
-    
+    <meta name=”description” content=”Search Our purpose is to engage with leading organizations and support their human capital needs. We understand the challenges that our clients face while filling a vacancy and our candidates who seem unsure about the next best opportunity. We exist to humanize the entire process and transform it into a long standing relationship.“>
 
 
 
