--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peergrowth</title>
+    <meta name="description" content="Our purpose is to engage with leading organisations and support their human capital needs. Wen understand the challenges that our clients face while filling a vacancy and our candidates who seem unsure about the next best opportunity. We exist to humanize the entire porcess and transform it into a long standing relationship.">
+
     <link rel="shortcut icon" type="image/png" href="images/favicon.PNG">
     <link rel="stylesheet" href="static/css/foundation.css">
     <link rel="stylesheet" href="static/css/slick.css">
@@ -30,8 +32,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/flickity-fade@1/flickity-fade.css">
     <script src="https://unpkg.com/flickity-fade@1/flickity-fade.js"></script>
-    <meta name=”description” content=”Search Our purpose is to engage with leading organizations and support their human capital needs. We understand the challenges that our clients face while filling a vacancy and our candidates who seem unsure about the next best opportunity. We exist to humanize the entire process and transform it into a long standing relationship.“>
-
+    
 
 
 
