--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peergrowth</title>
     <meta name="description" content="Our purpose is to engage with leading organisations and support their human capital needs. Wen understand the challenges that our clients face while filling a vacancy and our candidates who seem unsure about the next best opportunity. We exist to humanize the entire porcess and transform it into a long standing relationship.">
+    <meta name="google-site-verification" content="oa549_uyGMEvdIvfUTJ5TvibfHcYOw1wwdlndzQjHTQ" />
 
     <link rel="shortcut icon" type="image/png" href="images/favicon.PNG">
     <link rel="stylesheet" href="static/css/foundation.css">
