--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peergrowth</title>
+    <meta name="google-site-verification" content="oa549_uyGMEvdIvfUTJ5TvibfHcYOw1wwdlndzQjHTQ" />
     <link rel="shortcut icon" type="image/png" href="images/favicon.PNG">
     <link rel="stylesheet" href="static/css/foundation.css">
     <link rel="stylesheet" href="static/css/slick.css">
