--- a/joinus.html
+++ b/joinus.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Peergrowth</title>
     <meta name="google-site-verification" content="oa549_uyGMEvdIvfUTJ5TvibfHcYOw1wwdlndzQjHTQ" />
+    <meta name="description" content="Click here to join our team.">
+
     <link rel="shortcut icon" type="image/png" href="images/favicon.PNG">
     <link rel="stylesheet" href="static/css/foundation.css">
     <link rel="stylesheet" href="static/css/slick.css">
