--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity-fade@1/flickity-fade.css">
     <script src="https://unpkg.com/flickity-fade@1/flickity-fade.js"></script>
     
-
-
-
-
     <style>
         input[type="radio"]{
         margin: 0 10px 0 30px;
@@ -1176,6 +1172,17 @@
     <script src="js/jquery.validate.js"></script>
     <script src="js/slick.min.js" type="text/javascript"></script>
     <script src="js/app.js"></script>
+
+    <script type="text/javascript">
+          function activelinkcontrol(){
+          $('.action-hint1 a .scroll-down #tppp ').click(funtion(){
+            //remove active class from any of the nav section
+            $('#about.box #blog.box #contact.box').addClass('active')
+            $('#works.box').removeClass('active')
+          })
+        }
+    </script>
+
 </body>
 <!-- Mirrored from html.blahlab.com/aoko/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Feb 2020 10:19:14 GMT -->
 
